--- a/src/pages/editor/styles.css
+++ b/src/pages/editor/styles.css
@@ -7,7 +7,7 @@
 
     body {
         background-color: #0f0f1e;
-        color: #fe00d4;
+        color: #ff00bf;
         font-size: 16px;
         overflow: hidden;
     }
@@ -95,28 +95,28 @@ tr:hover {
       padding: 5px ;
     }
 
-    .contact {
+    .client {
         text-align: center;
-        margin-top: 150px;
+        margin-top: 30px;
         font-size: 2rem;
         font-weight: 600;
-        color: #00f7ff;
-        text-shadow: 0 0 10px rgb(0, 247, 255, 1);
+        color: #ff00bf;
+        text-shadow: 0 0 10px rgb(0, 0, 0);
     }
-    .contact-form { 
-        width: 300px;
-        margin: 50px auto;
+    .client-form {
+        width: 70%;
+        margin: 30px auto;
         line-height: 5;
         padding: 30px;
         background-color: rgba(255, 255, 255, 0.1);
         border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 247, 255, 0.2);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     
     }
 
-    .contact-form input, .contact-form textarea {
-        width: 100%;
-       background-color: rgb(138, 161, 230);
+    .client-form input, .client-form textarea {
+        width: 40%;
+       background-color: rgb(222, 138, 230);
        border:0;
        outline: 0;
        padding: 10px;
@@ -124,7 +124,7 @@ tr:hover {
        font-size: 18px;
            
     }
-    .contact-form input::placeholder {
+    .client-form input::placeholder {
         color: #0f0f1e;
     }
     .client-form textarea{
@@ -138,15 +138,15 @@ tr:hover {
 
     .client-form .btn-enviar {
        margin-top: 10px;   
-    
+        
     }
     
     .client-form .btn-enviar button {
-        width: 50%;
+        width: 100px;
         padding: 12px 16px;
-        background: linear-gradient(90deg, #00f7ff, #0066ff);
+        background: linear-gradient(90deg, #f9c1d5, #ff00bf);
         border-radius: 30px;
-        color: #000;
+        color: #ffffff;
         font-size: 1 rem;
         font-weight: 600;
         cursor: pointer;
