--- a/src/pages/editor/styles.css
+++ b/src/pages/editor/styles.css
@@ -4,67 +4,69 @@
     box-sizing: border-box;
     list-style: none;
     font-family: "Montserrat", sans-serif;
+}
 
-    body {
-        background-color: #0f0f1e;
-        color: #ff00bf;
-        font-size: 16px;
-        overflow: hidden;
-    }
-    
-    .header {
-        position: fixed;
-        width: 90vw;
-        top: 0;
-        padding: 20px 50px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        z-index: 3;
-    }
-   
-    header .logo {
-        font-family: "Orbitron", sans-serif;
-        font-size: 3rem;
-        font-weight: 900;
-        
-        display: inline-block;
-    }
-    .logo-img {
-        vertical-align: middle;
-        margin-right: 10px;
-        
-    }
+body {
+    background-color: #0f0f1e;
+    color: #ff00bf;
+    font-size: 16px;
+    overflow: hidden;
+}
+
+.header {
+    position: fixed;
+    width: 90vw;
+    top: 0;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 3;
+}
+
+header .logo {
+    font-family: "Orbitron", sans-serif;
+    font-size: 2rem;
+    font-weight: 900;
+
+    display: inline-block;
+}
+
+.logo-img {
+    vertical-align: middle;
+    margin-right: 3px;
+
+}
 
 
-    header nav ul li {
-        display: inline-block;
-        margin: 0 40px;
-        cursor: pointer;
-        position: relative;
-        padding: 5px 0;
+header nav ul li {
+    display: inline-block;
+    margin: 0 30px;
+    cursor: pointer;
+    position: relative;
+    padding: 5px 0;
 
-    }
+}
 
-    header nav ul li a {
-        color: #fff;
-        text-decoration: none;
-    }
+header nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
 
-    header nav ul li a::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 0;
-        height: 3px;
-        background-color: #00f7ff;
-        transition: width 0.5s ease;
-    }
+header nav ul li a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 3px;
+    background-color: #00f7ff;
+    transition: width 0.5s ease;
+}
 
-    header nav ul li a:hover::after {
-        width: 100%;
-    }
+header nav ul li a:hover::after {
+    width: 100%;
+}
 
 
 /* Tabelas */
@@ -76,7 +78,8 @@ table {
     margin-top: 50px;
 }
 
-th, td {
+th,
+td {
     padding: 12px;
     text-align: left;
     border-bottom: 1px solid #444;
@@ -90,71 +93,108 @@ th {
 tr:hover {
     background-color: #1a1a2e;
 }
+
 /* Clientes */
-    section.formulario {
-      padding: 5px ;
-    }
+section.formulario {
+    padding: 5px;
+}
 
-    .client {
-        text-align: center;
-        margin-top: 30px;
-        font-size: 2rem;
-        font-weight: 600;
-        color: #ff00bf;
-        text-shadow: 0 0 10px rgb(0, 0, 0);
-    }
-    .client-form {
-        width: 70%;
-        margin: 30px auto;
-        line-height: 5;
-        padding: 30px;
-        background-color: rgba(255, 255, 255, 0.1);
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    
-    }
+.client {
+    text-align: center;
+    margin-top: 10px;
+    font-size: 2rem;
+    font-weight: 600;
+    color: #ff00bf;
+    text-shadow: 0 0 10px rgb(0, 0, 0);
+}
 
-    .client-form input, .client-form textarea {
-        width: 40%;
-       background-color: rgb(222, 138, 230);
-       border:0;
-       outline: 0;
-       padding: 10px;
-       border-radius: 10px;
-       font-size: 18px;
-           
-    }
-    .client-form input::placeholder {
-        color: #0f0f1e;
-    }
-    .client-form textarea{
-        resize: none;
-        max-height: 200px;
-
-    }
-     .client-form textarea::placeholder {
-        color: #0f0f1e;
-    }
-
-    .client-form .btn-enviar {
-       margin-top: 10px;   
-        
-    }
-    
-    .client-form .btn-enviar button {
-        width: 100px;
-        padding: 12px 16px;
-        background: linear-gradient(90deg, #f9c1d5, #ff00bf);
-        border-radius: 30px;
-        color: #ffffff;
-        font-size: 1 rem;
-        font-weight: 600;
-        cursor: pointer;
-        border: 0;
-        
-    }
+.client-form {
+    width: 50%;
+    margin: 10px auto;
+    line-height: 5;
+    padding: 30px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
 
 }
+
+.client-form label {
+
+    margin-bottom: 10px;
+    font-size: 20px;
+    color: #ffffff;
+}
+
+.client-form input,
+.client-form textarea {
+    width: 40%;
+    background-color: rgb(222, 138, 230);
+    border: 0;
+    outline: 0;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 18px;
+
+}
+
+.client-form input::placeholder {
+    color: #0f0f1e;
+}
+
+.client-form textarea {
+    resize: none;
+    max-height: 200px;
+
+}
+
+.client-form textarea::placeholder {
+    color: #0f0f1e;
+}
+
+.client-form .btn-enviar {
+    margin-top: 10px;
+
+}
+
+.client-form .btn-enviar button {
+    width: 100px;
+    padding: 12px 16px;
+    background: linear-gradient(90deg, #f9c1d5, #ff00bf);
+    border-radius: 30px;
+    color: #ffffff;
+    font-size: 1 rem;
+    font-weight: 600;
+    cursor: pointer;
+    border: 0;
+
+}
+
+/*ver clientes */
+.body-clientes {
+    background-color: #000000;
+    color: #ff00bf;
+    font-size: 16px;
+    overflow: hidden;
+
+}
+
+.lista-clientes h2 {
+
+    color: #ffffff;
+    font-size: 25px;
+    overflow: hidden;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.lista-clientes ul li {
+    margin: 20px;
+    font-size: 15px;
+    color: #ff00bf;
+    display: inline-block;
+}
+
 /* editor de texto 
 #text{
     width: 100%;
